@@ -230,6 +230,8 @@ $(document).ready(function() {
 	//	}
 	//});
 	
+	EnableDisableTabs();
+	
     $( "#dialog-transferdevice" ).dialog({
           autoOpen: false,
           width: 380,
